src/components/Navbar.css
.nav {
    background-color: var(--light);
    color: var(--dark);
    font-size: 4rem;
    letter-spacing: -0.06em;
    height: 20vh;
    width: 100%;
    padding-top: 1rem;
}

.nav  a {
    color: inherit;
    text-decoration: none;
}

.nav a.active {
    text-decoration: underline;
    text-decoration-thickness: 3px;
}

.nav a:hover {
    color: inherit;
    text-decoration: underline;
    text-decoration-thickness: 3px;
}

.nav ul {
    padding: 0;
    margin: 0;
    list-style: none;
    display: flex;
    gap: 2vw;
}

.nav-brand {
    width: 50%;
    padding-left: 2rem;
}

#site-title {
    text-decoration: none;
}

.nav-links {
    width: 50%;
    display: flex;
    justify-content: space-between;
    padding-right: 2rem;
}

.nav-cart {
    white-space: nowrap;
}

/* .dropdown {
    position: relative;
    display: inline-block;
} */

.dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--dark);
    color: var(--light);
    z-index: 1;
    font-size: 4rem;
    white-space: nowrap;
    overflow-y: auto;
    height: 18rem;
    line-height: 3rem;
    padding: .2rem;
    padding-right: 1rem;
}

.dropdown:hover .dropdown-content {
    display: flex;
    flex-direction: column;
}

::-webkit-scrollbar {
    width: 3px;
}

::-webkit-scrollbar-thumb {
    background: #FCFBF8;
    border-radius: 10px;
}

